[package]
name = "redactr-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
globset = "0.4.18"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
walkdir = "2.5.0"
